# windows-apps-plugin

./: Cargo.toml
src/: lib.rs
