[package]
name = "windows-apps-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "windows_apps_plugin"
crate-type = ["cdylib",'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
uwp = ["dep:windows", "dep:is_elevated", "dep:winapi"]

[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
abi_stable = "0.11.3"
winapi = { version = "0.3.9", optional = true }
is_elevated = { version = "0.1.2", optional = true }
env_logger = "0.11.2"
opener = "0.6.1"

[dependencies.windows]
version = "0.54.0"
features = [
    "ApplicationModel",
    "ApplicationModel_Core",
    "Foundation_Collections",
    "Management",
    "Management_Deployment",
    # "Win32",
    # "Win32_Security",
    # "Win32_System",
    # "Win32_System_Threading",
]
optional = true

[profile.release]
lto = true
codegen-units = 1
opt-level = "z" 
